# charabia

./: Cargo.toml
charabia-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
charabia-py/python/charabia/: __init__.py
charabia-py/src/: enums.rs  lib.rs  token.rs  tokenizer.rs
core2-shim/: Cargo.toml
core2-shim/src/: lib.rs
