[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "charabia"
version = "0.1.0"
description = "A library to detect language, tokenize text, and normalize tokens"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["tokenizer", "nlp", "segmenter", "language-detection", "meilisearch"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "charabia._charabia"
